# HexProxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: mcp.md  plugin-development.md
examples/: add_header_plugin.py
plugins/: README.md  jwt_inspector.py
scripts/: test_mcp_sequence.py
src/hexproxy/: __init__.py  app.py  bodyview.py  certs.py  clipboard.py  extensions.py  mcp.py  models.py  preferences.py  proxy.py  resources.py  store.py  themes.py  tui.py  update_checker.py
src/hexproxy/docs/: plugin-development.md
src/hexproxy/logo_ascii/: logo.braille.txt  logo.txt
src/hexproxy/plugins/: __init__.py
src/hexproxy/security/: __init__.py  analysis.py  cve_db.py  cve_store.py  cve_sync.py  cvss.py
src/hexproxy/security/data/: __init__.py  cve_db.json
src/hexproxy/tui/: __init__.py  app.py  constants.py  events.py  layout.py  navigation.py  state.py  state_manager.py  theme.py
tests/: test_app.py  test_app_cve_cache.py  test_bodyview.py  test_clipboard.py  test_cve_store.py  test_cve_store_meta.py  test_cve_sync.py  test_extensions.py  test_inspect.py  test_layout.py  test_mcp.py  test_proxy.py  test_proxy_parsing.py  test_resources.py  test_security.py  test_store.py  test_themes.py  test_update_checker.py
