[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hexproxy"
version = "0.1.0"
description = "HTTP interception proxy with a terminal-first TUI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "ifysec" }
]
keywords = ["proxy", "http", "tui", "security", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Security"
]
dependencies = [
  "windows-curses; platform_system == 'Windows'",
]

[project.scripts]
hexproxy = "hexproxy.app:main"
hexproxy-mcp = "hexproxy.mcp:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
