[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexproxy"
version = "0.5.0"
description = "HTTP interception proxy with a terminal-first TUI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "SecureHex", email = "contacto@securehex.cl" }
]

maintainers = [
  { name = "Matías Tillerías", email = "matias.tillerias@securehex.cl" }
]

keywords = ["proxy", "http", "tui", "security", "terminal", "pentest"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Security"
]

dependencies = [
  "packaging>=23.1",
  "windows-curses; platform_system == 'Windows'",
]

[project.optional-dependencies]
brotli = [
  "brotli"
]
full = [
  "brotli"
]
dev = [
  "pytest>=8.0",
  "python-semantic-release>=10.0.0",
  "build>=1.2.0"
]

[project.urls]
Homepage = "https://securehex.cl"
Repository = "https://github.com/Secure-Hex/HexProxy"
Documentation = "https://hexproxy.securehex.cl"

[project.scripts]
hexproxy = "hexproxy.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hexproxy" = ["docs/*.md", "logo_ascii/*.txt"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
allow_zero_version = true
major_on_zero = false
tag_format = "v{version}"
build_command = "python -m build"

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "chore", "docs", "refactor", "test", "ci", "perf", "build", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
